-CustomerReservation Service(예약, 고객시점)